<?xml version="1.0"?>
<package format="2">
  <name>warehouse_robot</name>
  <version>0.0.0</version>
  <description>The warehouse_robot package</description>

  <maintainer email="ytodi@terpmail.umd.edu">Yashaarth Todi</maintainer>
  <maintainer email="suyashy@terpmail.umd.edu">SUyash Yeotikar</maintainer>
  <maintainer email="gbk93@terpmail.com">Gautam Balachandran</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aruco</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>open_manipulator_msgs</build_depend>
  <build_depend>open_manipulator_libs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>aruco</build_export_depend>
  <build_export_depend>open_manipulator_msgs</build_export_depend>
  <build_export_depend>open_manipulator_libs</build_export_depend>
  <exec_depend>aruco</exec_depend>
  <exec_depend>open_manipulator_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>open_manipulator_libs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>

</package>
